@@ -65,6 +65,9 @@ case "${1}" in
       umount -a -d -r -t notmpfs,nosysfs,nodevtmpfs,noproc >/dev/null
       evaluate_retval
 
+      # Make sure / is mounted read only (umount bug?)
+      mount -n -o remount,ro /
+
       # Make all LVM volume groups unavailable, if appropriate
       # This fails if swap or / are on an LVM partition
       #if [ -x /sbin/vgchange ]; then /sbin/vgchange -an > /dev/null; fi
