@@ -39,6 +39,10 @@
       <para>2013-05-11</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Minor update to boot script mountfs 
+          to ensure clean shutdown.</para>
+        </listitem>
+        <listitem>
           <para>[bdubbs] - Upgrade to gawk-4.1.0. Fixes
           <ulink url="&lfs-ticket-root;3343">#3343</ulink>.</para>
         </listitem>
@@ -57,7 +61,7 @@
           <ulink url="&lfs-ticket-root;3341">#3341</ulink>.</para>
         </listitem>
         <listitem>
-          <para>[bdubbs] - Upgrade to gettest-0.18.2.1. Fixes
+          <para>[bdubbs] - Upgrade to gettext-0.18.2.1. Fixes
           <ulink url="&lfs-ticket-root;3298">#3298</ulink>.</para>
         </listitem>
       </itemizedlist>
